--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/plotly.js-basic-dist": "^1.54.1",
     "plotly.js": "^2.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
