--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sim-script": "tsc scripts/run_sim.ts --outfile scripts/run_sim.js"
   },
   "dependencies": {
     "@types/plotly.js-basic-dist": "^1.54.1",
